app/assets/stylesheets/base/nav.scss
html{
    font-family: Helvetica , sans-serif;
    font-weight: lighter;
}
a{
    text-decoration: none;
    color:black
}

section {
    display: flex
}
.nav-container-logo{
    margin-left: 50px;
    border-radius:10px;
}
body{
    background-color: white;
}


input{
  margin: 8px 0;
  box-sizing: border-box;
  background-color: #E0FFFF;
  border-color: #1E90FF;
  border-radius:5px;
  width: 275px;
  height:45px;
  color:#1E90FF;
  font-size:17px;
}
.hidden {
	display: none;
}


.sessionHomeLink{
    width:10px;
}
.navSignIn{
    // text-decoration:  none;
    border: 1px solid lightblue;
    margin-right: 25px;
    color: lightblue;
    font-size: 20px;
}



.pfp{
    right:15px; 
    display:flex;
    align-items: center;
    justify-content: space-evenly;
    border-radius:50px;
    background-color: white;
    pointer-events: none;
    width: 30px;
    height: 25px;
}
ul {
  list-style: none;
  padding: 0;
  margin: 0;
  text-decoration: none;
}
li {
  padding: 8px 12px;
  text-decoration: none;
}

li:hover {
  background-color: rgba(0, 0, 0, 0.14);
  cursor: pointer;
}

///////////////////Video index
.videoIndexContainer{
    padding-left:200px;
    display:flex;
    flex-wrap: wrap;
    width:85%;
    height:100%;
    align-items: center;
    padding-top:100px;
    justify-content: space-evenly;
    column-count: 4;
}
.videoIndexItem{
    width:19%;
    height:20%;
    margin: 1px;
    font-size:14px;
    padding-bottom:30px;
}
.thumbnail{
    width:100%;
    height:50%;
    // margin-left:50px;
    // height:300px;
    display:block;
}
.videoDetails{
    display:flex;
    // justify-content: space-evenly;
    //   white-space: normal;

}
.videoTitle{
    width: 100%;
    flex-wrap: wrap;
    // height:50px;;
    // max-height: 50px;
    // margin:0% auto;
    height:50px;
    font-size:20px;
    font-weight:bold;
    margin-bottom:-10px;

}
.videoUploader{
    text-transform: capitalize;
    // height:10px;
    // vertical-align:top
    // margin-top: -10px;
    float:left;
}
.indexPfp{
    display:flex;
    // position:absolute;
    // align-items: center;
    // justify-content: space-evenly;
    border-radius:50px;
    background-color: white;
    pointer-events: none;
    margin-top:30px;
    // padding-right:50px;
}
.indexPfp > img {
    width: 45px;
    height: 35px;
    margin-left:7px;

}
.videoIndexItemText{
    display:flex;
    flex-direction: column;
    width:80%;
    // height:100px;
    // margin-right:50px;
    // height:150px;
    margin-left:20px;
    overflow:hidden;
    // vertical-align:top;
    white-space: normal;
    margin-top: 0;


    // justify-content: space-evenly;
}
.videoStats{
    // height:15px;
    display:flex;
    flex-direction: row;
    margin-top: -10px;
    // justify-content: space-between;

    // margin-right:25px;
    // vertical-align:top
}
.videoStats > p{
    padding-right:10px;
}
.uploadDate{
    // height:10px;
    // margin-top: 0;

    // vertical-align:top
}










.welcomeTitle{
    text-decoration: none;
    font-size: 20px;
    height: 25px;
    // top:50%;
    // position: relative;
    // position: absolute;
//   top:;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    left:100px;

    // top: 150px;
    // text-align: center;
}


.dropPfp{
    position:relative;
    margin-top:5px;
    width: 30px;
    height: 25px;
}


//Session
.login-form-container{
    margin: 0% auto;
    border: 1px solid grey;
    width: 550px;
    height: 550px;
    margin-top: 200px;
    border-radius: 15px;
}
.login-form-box{
    width:100%;
    margin: 0% auto;
    display:flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 350px;
    box-sizing: border-box;
    text-align: center;
    margin-bottom:50px;
}
.login-input{
    padding-left:20px;
}
.login--logo{
    padding-top:15px;
    display:flex;
    align-items:center;
    margin: 0% auto;
    width:100px;
    height:75px;
}
.formLinks{
    display:flex;
    align-items: center;
    justify-content: space-evenly;
    bottom: 0px;
    top:10px;
    margin-top:18px;
    flex-direction: row;
    
}
.formLinks > a {
    text-decoration: none;
    color: #1E90FF;
    border-radius: 5px;
    width: 150px;
    display: flex;
    text-align: center;
    flex-direction: column;
    top:50%;
    font-weight: bolder;
}

.session-submit{
    display:block;
    background-color: #1E90FF;
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 5px;
    width:75px;
    height:40px;
    margin: 0% auto;
    text-align: center;
    margin-top:20px;

}
.demo{
    display:block;
    background-color: #1E90FF;
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 5px;
    width:75px;
    height:40px;
    margin: 0% auto;
    text-align: center;
}

.loginErrors{
    color:red;
    height: 20px;
    width:100%;
    font-size:16;
}
.errors{
    color:red;
    height: 20px;
    width:100%;
    font-size:16;
}

.formText{
    margin:0% auto;
    // right: 50px
    text-align: center;
    // font-weight: lighter;
}
.formText > p:first-child{
    font-size: 25px;
    margin-bottom:-15px;
}
///////////////////// Nav
.top-nav {
    display: flex;
    border-bottom: 1px solid grey;
    position: fixed;
    width: 100%;
    justify-content: space-between;
    background: white;
    align-items:center;
    margin: 0;
    padding: 0;
    overflow:hidden;
    margin-top:-10px;
    margin-left:-10px;

}
.welcome--logo{
    width: 60px;
    height: 40px;
}
.button_container{
    position:relative;
    height: 30px;
    width:30px;
}
.dropdown {
    position: fixed;
    background: white;
    overflow:hidden;
    margin-top:-8px;
    top: 68px;
    right: 35px;
    width: 300px;
    z-index: 2;
    border: 1px solid rgba(0, 0, 0, 0.04);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
    border-top: 0;
}
.dropdown > li{
    text-decoration: none;
}
.button{
    position:absolute;
    right: 50px;
    height:40px;
    width:45px;
    border-radius: 25px;
    background-color:white;
}
.button > img {
    width: 30px;
    height: 25px;
}
.topLi{
    pointer-events: none;
    border-bottom: 1px solid grey;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    height:35px;
}
.topLi > h3{
    margin-left:35px;
    margin-top:-35px;
}
.topLi > p{
    margin-left:35px;
    margin-top:-15px;

}
.searchIcon{
    width:20px;
    height:20px;
    border: 1px solid grey;
    border-left: 0;
    margin-top:6px;
}

